deploy/k8s/backendui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendui
  namespace: simple-admin
  labels:
    app: backendui
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: backendui
  template:
    metadata:
      labels:
        app: backendui
    spec:
      serviceAccountName: endpoints-finder
      containers:
      - name: backendui
        image: ryanpower/backendui:0.0.16
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: backendui-svc
  namespace: simple-admin
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
    name: http
    protocol: TCP
  selector:
    app: backendui
