deploy/k8s/corerpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corerpc
  namespace: simple-admin
  labels:
    app: corerpc
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: corerpc
  template:
    metadata:
      labels:
        app: corerpc
    spec:
      serviceAccountName: endpoints-finder
      containers:
      - name: corerpc
        image: ryanpower/corerpc:0.0.15
        ports:
        - containerPort: 9101
        readinessProbe:
          tcpSocket:
            port: 9101
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9101
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: corerpc-svc
  namespace: simple-admin
spec:
  ports:
  - port: 9101
    targetPort: 9101
  selector:
    app: corerpc
